Fixed missing spaces in user block

--- a/Sources/TEMPUS/UI/TEMPUS.WebSite/Content/Styles/UserBlock.css
+++ b/Sources/TEMPUS/UI/TEMPUS.WebSite/Content/Styles/UserBlock.css
@@ -1,9 +1,7 @@
 ﻿#user-block-dropdown
 {
-    min-width: 200px;
+    min-width: 220px;
 }
-
-
 
 #profile-btn
 {
